# DynamicDL

./: .gitignore  README.md  build_partial.sh  data.json  docs.md  example.ipynb  example.py  main.py  oxford_classification.py  oxford_detection.py  oxford_segmentation.py  pyproject.toml  requirements.txt  sample_training.py  setup.py  test.json  test.py  tokens.py  tutorial.md  utils.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
cvdata/: _utils.py  cvdata.py  data_items.py  processing.py
cvdataloading/: cvdata.py  processing.py
docs/: cvdata.html  cvdataloading.html  data.html  data_items.html  dynamicdl.data.html  dynamicdl.html  dynamicdl.parsing.html  dynamicdl.processing.html  genindex.html  index.html  installation.html  modules.html  objects.inv  parsing.html  processing.html  py-modindex.html  search.html  searchindex.js  setup.html  transforms.html  tutorial.html
docs/_modules/: index.html  transforms.html
docs/_sources/: cvdata.rst.txt  cvdataloading.rst.txt  data.rst.txt  dynamicdl.data.rst.txt  dynamicdl.parsing.rst.txt  dynamicdl.processing.rst.txt  dynamicdl.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  parsing.rst.txt  processing.rst.txt  transforms.rst.txt  tutorial.rst.txt
docs/_static/: documentation_options.js
docs/doctrees/: cvdata.doctree  data_items.doctree  environment.pickle  index.doctree  modules.doctree  processing.doctree  transforms.doctree
docs/html/: .buildinfo  cvdata.html  index.html
dynamicdl/: __init__.py  _utils.py  _warnings.py  config.json  config.py  data.py  data_items.py  dynamicdl.py  dynamicds.py  engine.py  processing.py  tokens.py  transforms.py
dynamicdl/_main/: __init__.py  _collate.py  _engine.py  _transforms.py  _utils.py
dynamicdl/data/: __init__.py  dataentry.py  dataitem.py  datatype.py  (+3 more)
formats/: __init__.py  _tokens.py  _utils.py  json.py  txt.py
formats_old/: _tokens.py  json.py  txt.py
src/: DataItems.py  Dataset.py  FormatTokens.py  IdentifierTokens.py  Main.py  Names.py  Processing.py  StringFormatToken.py  StructureTokens.py  Token.py  Transforms.py  __init__.py  _utils.py  cvdata.py  data_items.py  populate.py  processing.py  transforms.py
src_old/: DataItems.py  FormatTokens.py  ModeToken.py  PurposeTokens.py  __init__.py
(+89 files in other folders)
